--- a/src/main/resources/assets/crimsonsteves_mutant_mobs/lang/en_us.json
+++ b/src/main/resources/assets/crimsonsteves_mutant_mobs/lang/en_us.json
@@ -3,9 +3,9 @@
   "subtitles.mutant_skeleton_smash": "Stunt skeleton smashes",
   "subtitles.mutant_skeleton_avoid": "Stunt skeleton leaps",
   "subtitles.mutant_skeleton_death": "Stunt skeleton collapses",
-  "entity.crimsonsteves_mutant_mobs.mutant_skeleton": "Stunt Skeleton",
+  "entity.crimsonsteves_mutant_mobs.mutant_skeleton": "Mutant Skeleton",
   "subtitles.mutant_skeleton_hurt": "Stunt skeleton gets hurt",
   "subtitles.mutant_skeleton_punch": "Stunt skeleton attacks",
-  "item.crimsonsteves_mutant_mobs.mutant_skeleton_spawn_egg": "Stunt Skeleton Spawn Egg",
+  "item.crimsonsteves_mutant_mobs.mutant_skeleton_spawn_egg": "Mutant Skeleton Spawn Egg",
   "subtitles.mutant_skeleton_idle": "Stunt skeleton idle"
 }
